--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,15 @@ div.main {
   align-items: center;
   height: 100%;
   min-height: 100vh;
+}
 
+div.main::after {
+  width: 100%;
+  height: 100%;
+  content: '';
+  z-index: -1;
+  position: fixed;
+  top: 0;
 
   background: url(../images/bg.svg);
   background-repeat: no-repeat;
@@ -82,10 +90,13 @@ div.content .info .actions button:hover {
 
 @media(max-width: 750px) {
   div.main {
-    background: none;
     height: 100vh;
     display: flex;
     align-items: center;
+  }
+
+  div.main::after {
+    background: none;
   }
 
   div.content {
