--- a/assets/css/calc.css
+++ b/assets/css/calc.css
@@ -1,3 +1,35 @@
+div.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  min-height: 100vh;
+}
+
+div.main::after {
+  width: 100%;
+  height: 100%;
+  content: '';
+  z-index: -1;
+  position: fixed;
+  top: 0;
+
+  background: url(../images/bg_2.svg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 40vw -20vh;
+  background-origin: border-box;
+  background-size: 80vw auto;
+}
+
+div.content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 85%;
+}
+
 #form {
   display: flex;
   flex-direction: column;
@@ -12,7 +44,7 @@
 }
 
 #form input {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 1.6rem;
   color: #495055;
 
