--- a/assets/css/calc.css
+++ b/assets/css/calc.css
@@ -120,7 +120,6 @@
   justify-content: space-around;
   align-items: center;
   color: #707070;
-  height: 100%;
   height: 220px;
   width: 400px;
   border-radius: 16px;
@@ -201,13 +200,11 @@ table tr .level {
 }
 
 /* MediaQueries */
-@media(max-height: 530px) {
+@media(max-height: 550px) and (min-width: 931px) {
   .content {
     align-items: flex-start;
-    flex-direction: column;
     margin-top: 30px;
-    overflow: hidden;
-    width: 100vw;
+    min-height: 100%;
   }
 }
 
@@ -236,7 +233,9 @@ table tr .level {
 
   .content {
     flex-direction: column;
+    min-height: 100vh;
     margin-top: 30px;
+    align-items: center
   }
 
   .content .input img {
@@ -257,11 +256,24 @@ table tr .level {
     align-self: center;
   }
 
+  #form input {
+    font-size: 1.2rem;
+  
+    width: 300px;
+  }
+
+  #form button {
+    font-size: 1.2rem;
+    width: 300px;
+  }
+
   .results {
     position: relative;
     overflow: hidden;
     width: 100vw;
     padding-bottom: 40px;
+    min-height: 600px;
+    justify-content: flex-start;
   }
 
   .results::after {
@@ -275,5 +287,26 @@ table tr .level {
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
     background-color: #03C4A1;
+  }
+
+  .card {
+    width:80%;
+    max-width: 400px;
+    margin-top: 10px;
+  }
+
+  .table {
+    width: max-content;
+    display: flex;
+    max-width: 80%;
+  }
+
+  .table table {
+    margin-top: 20px;
+    justify-self: center;
+  }
+
+  table tr td{
+    font-size: 18px;
   }
 }
