--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,7 +100,7 @@ div.content .info .actions button:hover {
   div.content {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 270px 1fr;
     grid-template-areas:
     'info'
     'landing';
@@ -119,7 +119,8 @@ div.content .info .actions button:hover {
   }
 
   div.content .landing img {
-    width: 80%
+    width: 80%;
+    max-width: 350px;
   }
 
   div.content .info {
