--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -14,7 +14,7 @@ html {
 }
 
 body, button {
-  font-family: 'Montserrat', 'sans-serif';
+  font-family: 'Montserrat', 'Helvetica', 'Arial', 'sans-serif';
 }
 
 body {
